SERVER-50077 Set unsharded shard version on collection creation only on primary node on the shard op observer and clear the filtering metadata if the shard register update or the refresh fails on shardCollection